# ml_fw

./: .gitignore  README.md  git_ingest.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
Notebooks/: Metric_boxvx.ipynb  Model_dev.ipynb  Profile_cor.ipynb  Residual_boxvx.ipynb  Rolling_met.ipynb
docs/: Maintenance_Philosophy.md
ml_fw/: __init__.py  dat_io.py  data_io.py  ml_mod.py  profile.py  resid.py  testing.py
ml_fw/Notebooks/: Metric_boxvx.ipynb  Model_dev.ipynb  Profile_cor.ipynb  Residual_boxvx.ipynb  Rolling_met.ipynb
ml_fw/inspect/: __init__.py  _boxplot_metvx.py  _boxplot_vx.py  _rolling_met.py  boxplot_metvx.py  boxplot_vx.py
ml_fw/testing/: resid_testing.py  testing.py
ml_fw/testing_scripts/: fshift_testing.py  metbox_testing.py  resid_testing.py  roll_testing.py  testing.py
